--- a/myAcademy/src/Controller/Login.fxml
+++ b/myAcademy/src/Controller/Login.fxml
@@ -16,7 +16,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+            <MenuItem mnemonicParsing="false" text="About MyAcademy" />
           </items>
         </Menu>
       </menus>
