--- a/myAcademy/bin/View/Administrador.fxml
+++ b/myAcademy/bin/View/Administrador.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAdmin">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -22,17 +22,18 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="14.0" layoutY="14.0" prefHeight="18.0" prefWidth="140.0" text="Nombre de usuario">
+            <Label fx:id="labName" layoutX="14.0" layoutY="14.0" prefHeight="18.0" prefWidth="140.0" text="Nombre de usuario">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="67.0" layoutY="112.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Añadir usuario" />
-            <Button layoutX="67.0" layoutY="160.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Administrar usuarios" />
-            <Button layoutX="67.0" layoutY="209.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Crear grupo" />
-            <Button layoutX="67.0" layoutY="261.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Administrar grupos" />
-            <Button layoutX="67.0" layoutY="311.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Hacer copia de seguridad" />
-            <Button layoutX="541.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" style="-fx-background-color: #dd0f0f;" text="Salir" />
+           
+            <Button fx:id="bAddUser" layoutX="67.0" layoutY="112.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Añadir usuario" />
+            <Button fx:id="bAdminUser" layoutX="67.0" layoutY="160.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Administrar usuarios" />
+            <Button fx:id="bAdminGrupo" layoutX="67.0" layoutY="261.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Administrar grupos" />
+            <Button fx:id="bBackup" layoutX="67.0" layoutY="311.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Hacer copia de seguridad" />
+            <Button fx:id="bExit" layoutX="541.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" style="-fx-background-color: #dd0f0f;" text="Salir" />
+            <Button fx:id="bAddGrupo" layoutX="68.0" layoutY="207.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="505.0" text="Crear grupo" />
       </children>
     </AnchorPane>
   </children>
