--- a/myAcademy/src/View/Login.fxml
+++ b/myAcademy/src/View/Login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerLogin">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -23,9 +23,9 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button layoutX="160.0" layoutY="216.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Entrar" />
-            <TextField layoutX="160.0" layoutY="73.0" prefHeight="26.0" prefWidth="302.0" />
-            <TextField layoutX="160.0" layoutY="148.0" prefHeight="26.0" prefWidth="302.0" />
+            <Button fx:id="bEntrar" layoutX="160.0" layoutY="216.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Entrar" />
+            <TextField fx:id="textName" layoutX="160.0" layoutY="73.0" prefHeight="26.0" prefWidth="302.0" />
+            <TextField fx:id="textPass" layoutX="160.0" layoutY="148.0" prefHeight="26.0" prefWidth="302.0" />
             <Label layoutX="160.0" layoutY="46.0" prefHeight="18.0" prefWidth="140.0" text="Nombre de usuario">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
@@ -36,7 +36,7 @@
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="160.0" layoutY="291.0" prefHeight="18.0" prefWidth="319.0" text="Nombre de usuario o contraseña incorrectos" visible="false">
+            <Label fx:id="labErr" layoutX="160.0" layoutY="291.0" prefHeight="18.0" prefWidth="319.0" text="Nombre de usuario o contraseña incorrectos" visible="false">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
