--- a/myAcademy/bin/View/AddUser.fxml
+++ b/myAcademy/bin/View/AddUser.fxml
@@ -24,7 +24,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bAdd" layoutX="146.0" layoutY="282.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Añadir" />
+            <Button fx:id="bAdd" layoutX="180.0" layoutY="282.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Añadir" />
             <TextField fx:id="textName" layoutX="14.0" layoutY="69.0" prefHeight="26.0" prefWidth="302.0" />
             <TextField fx:id="textEmail" layoutX="14.0" layoutY="149.0" prefHeight="26.0" prefWidth="302.0" promptText="Solo profesor" />
             <Label layoutX="14.0" layoutY="37.0" prefHeight="18.0" prefWidth="140.0" text="Nombre">
@@ -62,6 +62,18 @@
             <TextField fx:id="textDNI" layoutX="14.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
             <TextField fx:id="textTel" layoutX="373.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
             <Label layoutX="373.0" layoutY="187.0" prefHeight="18.0" prefWidth="140.0" text="Telefono">
+               <font>
+                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="textPass" layoutX="14.0" layoutY="270.0" prefHeight="26.0" prefWidth="150.0" />
+            <TextField fx:id="textApellidos" layoutX="14.0" layoutY="319.0" prefHeight="26.0" prefWidth="150.0" />
+            <Label layoutX="25.0" layoutY="252.0" prefHeight="18.0" prefWidth="140.0" text="Password">
+               <font>
+                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="10.0" layoutY="302.0" prefHeight="18.0" prefWidth="140.0" text="Apellidos">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
