--- a/myAcademy/src/View/AdministrarUser.fxml
+++ b/myAcademy/src/View/AdministrarUser.fxml
@@ -38,8 +38,8 @@
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="combType" layoutX="628.0" layoutY="90.0" prefWidth="150.0" />
-            <Label layoutX="628.0" layoutY="58.0" prefHeight="18.0" prefWidth="140.0" text="Tipo usuario">
+            <ComboBox fx:id="combEva" layoutX="628.0" layoutY="90.0" prefWidth="150.0" />
+            <Label layoutX="628.0" layoutY="58.0" prefHeight="18.0" prefWidth="140.0" text="Evaluacion">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
@@ -48,7 +48,7 @@
             <TextField fx:id="textDNI" layoutX="269.0" layoutY="277.0" prefHeight="26.0" prefWidth="150.0" />
             <TextField fx:id="textTel" layoutX="628.0" layoutY="234.0" prefHeight="26.0" prefWidth="150.0" />
             <TextField fx:id="textPass" layoutX="269.0" layoutY="213.0" prefHeight="26.0" prefWidth="224.0" />
-            <ListView fx:id="listUsers" layoutX="29.0" layoutY="70.0" prefHeight="325.0" prefWidth="200.0" />
+            <ListView fx:id="listVAlumnos" layoutX="29.0" layoutY="70.0" prefHeight="325.0" prefWidth="200.0" />
             <Label layoutX="29.0" layoutY="41.0" prefHeight="18.0" prefWidth="126.0" text="Lista de usuarios">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
