--- a/myAcademy/src/View/AddUser.fxml
+++ b/myAcademy/src/View/AddUser.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAddUser">
+<VBox prefHeight="500" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAddUser">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -24,17 +24,17 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bAdd" layoutX="180.0" layoutY="282.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Añadir" />
+            <Button fx:id="bAdd" layoutX="95.0" layoutY="318.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="407.0" text="Añadir usuario" />
             <TextField fx:id="textName" layoutX="14.0" layoutY="69.0" prefHeight="26.0" prefWidth="302.0" />
-            <TextField fx:id="textEmail" layoutX="14.0" layoutY="149.0" prefHeight="26.0" prefWidth="302.0" promptText="Solo profesor" />
-            <Label layoutX="14.0" layoutY="37.0" prefHeight="18.0" prefWidth="140.0" text="Nombre">
+            <TextField fx:id="textEmail" layoutX="13.0" layoutY="278.0" prefHeight="26.0" prefWidth="302.0" />
+            <Label layoutX="14.0" layoutY="46.0" prefHeight="18.0" prefWidth="140.0" text="Nombre">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="122.0" prefHeight="18.0" prefWidth="140.0" text="Email">
+            <Label fx:id="labEmail"  layoutX="14.0" layoutY="260.0" prefHeight="18.0" prefWidth="140.0" text="Email">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
             <Label fx:id="labErr" layoutX="156.0" layoutY="332.0" prefHeight="18.0" prefWidth="319.0" text="Nombre de usuario o contraseña incorrectos" visible="false">
@@ -42,40 +42,40 @@
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="373.0" layoutY="122.0" prefHeight="18.0" prefWidth="140.0" text="Sexo">
+            <Label layoutX="373.0" layoutY="103.0" prefHeight="18.0" prefWidth="140.0" text="Sexo">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
             <ComboBox fx:id="combType" layoutX="373.0" layoutY="69.0" prefWidth="150.0" />
-            <Label layoutX="373.0" layoutY="37.0" prefHeight="18.0" prefWidth="140.0" text="Tipo usuario">
+            <Label layoutX="373.0" layoutY="46.0" prefHeight="18.0" prefWidth="140.0" text="Tipo usuario">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="combGender" layoutX="373.0" layoutY="149.0" prefWidth="150.0" />
-            <Label layoutX="14.0" layoutY="187.0" prefHeight="18.0" prefWidth="140.0" text="DNI">
+            <ComboBox fx:id="combGender" layoutX="373.0" layoutY="121.0" prefWidth="150.0" />
+            <Label layoutX="14.0" layoutY="152.0" prefHeight="18.0" prefWidth="140.0" text="DNI">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="textDNI" layoutX="14.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
-            <TextField fx:id="textTel" layoutX="373.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
-            <Label layoutX="373.0" layoutY="187.0" prefHeight="18.0" prefWidth="140.0" text="Telefono">
+            <TextField fx:id="textDNI" layoutX="14.0" layoutY="174.0" prefHeight="26.0" prefWidth="150.0" />
+            <TextField fx:id="textTel" layoutX="373.0" layoutY="174.0" prefHeight="26.0" prefWidth="150.0" />
+            <Label fx:id="labTel" layoutX="373.0" layoutY="152.0" prefHeight="18.0" prefWidth="140.0" text="Telefono">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="textPass" layoutX="14.0" layoutY="270.0" prefHeight="26.0" prefWidth="150.0" />
-            <TextField fx:id="textApellidos" layoutX="14.0" layoutY="319.0" prefHeight="26.0" prefWidth="150.0" />
-            <Label layoutX="25.0" layoutY="252.0" prefHeight="18.0" prefWidth="140.0" text="Password">
+            <TextField fx:id="textPass" layoutX="14.0" layoutY="226.0" prefHeight="26.0" prefWidth="150.0" />
+            <TextField fx:id="textApellidos" layoutX="14.0" layoutY="120.0" prefHeight="26.0" prefWidth="150.0" />
+            <Label layoutX="14.0" layoutY="208.0" prefHeight="18.0" prefWidth="140.0" text="Password">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="10.0" layoutY="302.0" prefHeight="18.0" prefWidth="140.0" text="Apellidos">
+            <Label layoutX="14.0" layoutY="103.0" prefHeight="18.0" prefWidth="140.0" text="Apellidos">
                <font>
-                  <Font name="Microsoft JhengHei UI Bold" size="12.0" />
+                  <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
       </children>
