--- a/myAcademy/src/View/AdministrarAlumno.fxml
+++ b/myAcademy/src/View/AdministrarAlumno.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="554.0" minWidth="836.0" prefHeight="554.0" prefWidth="836.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAdminUser">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="440.0" minWidth="836.0" prefHeight="454.0" prefWidth="836.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAdminAlumno">
   <children>
     <MenuBar prefHeight="13.0" prefWidth="762.0" VBox.vgrow="NEVER">
       <menus>
@@ -23,11 +23,10 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="490.0" prefWidth="758.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="458.0" prefWidth="836.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bAdd" layoutX="395.0" layoutY="411.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Modificar" />
+            <Button fx:id="bAdd" layoutX="269.0" layoutY="352.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="514.0" style="-fx-background-color: #ed7812;" text="Modificar" textFill="#f5f5f5e5" />
             <TextField fx:id="textName" layoutX="269.0" layoutY="90.0" prefHeight="26.0" prefWidth="302.0" />
-            <TextField fx:id="textEmail" layoutX="266.0" layoutY="340.0" prefHeight="26.0" prefWidth="302.0" promptText="Solo profesor" />
             <Label layoutX="269.0" layoutY="67.0" prefHeight="18.0" prefWidth="140.0" text="Nombre">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
@@ -39,48 +38,37 @@
                </font>
             </Label>
             <ComboBox fx:id="combEva" layoutX="628.0" layoutY="90.0" prefWidth="150.0" />
-            <Label layoutX="628.0" layoutY="58.0" prefHeight="18.0" prefWidth="140.0" text="Evaluacion">
+            <Label layoutX="627.0" layoutY="67.0" prefHeight="18.0" prefWidth="140.0" text="Evaluacion">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="combGender" layoutX="628.0" layoutY="170.0" prefWidth="150.0" />
-            <TextField fx:id="textDNI" layoutX="269.0" layoutY="277.0" prefHeight="26.0" prefWidth="150.0" />
-            <TextField fx:id="textTel" layoutX="628.0" layoutY="234.0" prefHeight="26.0" prefWidth="150.0" />
-            <TextField fx:id="textPass" layoutX="269.0" layoutY="213.0" prefHeight="26.0" prefWidth="224.0" />
-            <ListView fx:id="listVAlumnos" layoutX="29.0" layoutY="70.0" prefHeight="325.0" prefWidth="200.0" />
-            <Label layoutX="29.0" layoutY="41.0" prefHeight="18.0" prefWidth="126.0" text="Lista de usuarios">
+            <ComboBox fx:id="combGender" layoutX="628.0" layoutY="148.0" prefWidth="150.0" />
+            <TextField fx:id="textDNI" layoutX="269.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
+            <TextField fx:id="textTel" layoutX="628.0" layoutY="213.0" prefHeight="26.0" prefWidth="150.0" />
+            <ListView fx:id="listVAlumnos" layoutX="29.0" layoutY="70.0" prefHeight="326.0" prefWidth="224.0" />
+            <Label layoutX="29.0" layoutY="41.0" prefHeight="18.0" prefWidth="126.0" text="Lista de Alumnos">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
             <TextField fx:id="textApellidos" layoutX="269.0" layoutY="148.0" prefHeight="26.0" prefWidth="224.0" />
-            <Label layoutX="269.0" layoutY="186.0" prefHeight="18.0" prefWidth="140.0" text="Contraseña">
+            <Label layoutX="269.0" layoutY="124.0" prefHeight="18.0" prefWidth="140.0" text="Apellidos ">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="269.0" layoutY="124.0" prefHeight="18.0" prefWidth="140.0" text="Apellido">
+            <Label layoutX="627.0" layoutY="124.0" prefHeight="18.0" prefWidth="140.0" text="Sexo">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="627.0" layoutY="139.0" prefHeight="18.0" prefWidth="140.0" text="Sexo">
+            <Label layoutX="627.0" layoutY="186.0" prefHeight="18.0" prefWidth="140.0" text="Telefono">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="627.0" layoutY="213.0" prefHeight="18.0" prefWidth="140.0" text="Telefono">
-               <font>
-                  <Font name="Microsoft JhengHei" size="12.0" />
-               </font>
-            </Label>
-            <Label layoutX="266.0" layoutY="313.0" prefHeight="18.0" prefWidth="140.0" text="Email">
-               <font>
-                  <Font name="Microsoft JhengHei" size="12.0" />
-               </font>
-            </Label>
-            <Label layoutX="269.0" layoutY="251.0" prefHeight="18.0" prefWidth="140.0" text="DNI">
+            <Label layoutX="269.0" layoutY="186.0" prefHeight="18.0" prefWidth="140.0" text="DNI">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
