--- a/myAcademy/bin/View/AddUser.fxml
+++ b/myAcademy/bin/View/AddUser.fxml
@@ -32,7 +32,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="labEmail"  layoutX="14.0" layoutY="260.0" prefHeight="18.0" prefWidth="140.0" text="Email">
+            <Label fx:id="labEmail" layoutX="14.0" layoutY="260.0" prefHeight="18.0" prefWidth="140.0" text="Email">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
@@ -78,6 +78,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
       </children>
     </AnchorPane>
   </children>
