--- a/myAcademy/src/View/AddGroup.fxml
+++ b/myAcademy/src/View/AddGroup.fxml
@@ -37,6 +37,7 @@
                </font>
             </Label>
             <ListView fx:id="listVProfes" layoutX="266.0" layoutY="181.0" prefHeight="200.0" prefWidth="302.0" />
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
       </children>
     </AnchorPane>
   </children>
