--- a/myAcademy/src/View/ModificarAlumno.fxml
+++ b/myAcademy/src/View/ModificarAlumno.fxml
@@ -73,6 +73,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
       </children>
     </AnchorPane>
   </children>
