--- a/myAcademy/bin/View/Alumno.fxml
+++ b/myAcademy/bin/View/Alumno.fxml
@@ -23,22 +23,23 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button layoutX="28.0" layoutY="299.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Realizar prueba" />
-            <ListView layoutX="28.0" layoutY="74.0" prefHeight="200.0" prefWidth="242.0" />
-            <Label layoutX="28.0" layoutY="57.0" prefHeight="18.0" prefWidth="74.0" text="Pruebas">
+            <Button layoutX="15.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Realizar prueba" />
+            <ListView layoutX="15.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="99.0" layoutY="54.0" prefHeight="18.0" prefWidth="74.0" text="Pruebas">
                <font>
                   <Font name="Microsoft YaHei Light" size="12.0" />
                </font>
             </Label>
-            <ListView layoutX="383.0" layoutY="74.0" prefHeight="200.0" prefWidth="242.0" />
-            <Label layoutX="383.0" layoutY="57.0" prefHeight="18.0" prefWidth="126.0" text="Pruebas realizadas">
+            <ListView layoutX="384.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="442.0" layoutY="54.0" prefHeight="18.0" prefWidth="126.0" text="Pruebas realizadas">
                <font>
                   <Font name="Microsoft YaHei Light" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="383.0" layoutY="299.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Consultar resultado" />
-            <Button layoutX="282.0" layoutY="152.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0" text="Ver ficha" />
-            <Label layoutX="507.0" layoutY="26.0" prefHeight="18.0" prefWidth="119.0" text="Nombre" textAlignment="CENTER" />
+            <Button layoutX="384.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Consultar resultado" />
+            <Button layoutX="278.0" layoutY="98.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0" text="Ver ficha" />
+            <Button fx:id="bShowPayments" layoutX="278.0" layoutY="175.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0" text="Ver pagos" />
+            <Button fx:id="bExit" layoutX="278.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: #dd0f0f;" text="Salir" />
          </children>
     </AnchorPane>
   </children>
