--- a/myAcademy/src/View/ShowPayments.fxml
+++ b/myAcademy/src/View/ShowPayments.fxml
@@ -36,13 +36,13 @@
                </font>
             </Label>
             <ListView fx:id="listVPagos" layoutX="102.0" layoutY="181.0" prefHeight="200.0" prefWidth="302.0" />
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
             <TextField fx:id="textDate" layoutX="432.0" layoutY="267.0" prefHeight="26.0" prefWidth="302.0" />
             <Label layoutX="432.0" layoutY="234.0" prefHeight="18.0" prefWidth="140.0" text="Fecha">
                <font>
                   <Font name="Microsoft JhengHei Bold" size="12.0" />
                </font>
             </Label>
+            <Button fx:id="bBack" layoutX="25.0" layoutY="24.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
