--- a/myAcademy/bin/View/AddGroup.fxml
+++ b/myAcademy/bin/View/AddGroup.fxml
@@ -37,7 +37,7 @@
                </font>
             </Label>
             <ListView fx:id="listVProfes" layoutX="266.0" layoutY="181.0" prefHeight="200.0" prefWidth="302.0" />
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
+            <Button fx:id="bBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
