--- a/myAcademy/bin/View/AdministrarGroup.fxml
+++ b/myAcademy/bin/View/AdministrarGroup.fxml
@@ -63,7 +63,7 @@
                </font>
             </Label>
             <ComboBox fx:id="combDuration" layoutX="404.0" layoutY="282.0" prefWidth="200.0" />
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
+            <Button fx:id="bBack" layoutX="27.0" layoutY="29.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
