--- a/myAcademy/src/View/AdministrarGroupStudents.fxml
+++ b/myAcademy/src/View/AdministrarGroupStudents.fxml
@@ -43,7 +43,7 @@
                </font>
             </Label>
             <Button fx:id="bDelete" layoutX="579.0" layoutY="445.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="200.0" text="Eliminar" />
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
+            <Button fx:id="bBack" layoutX="19.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
