--- a/myAcademy/src/View/CrearTest.fxml
+++ b/myAcademy/src/View/CrearTest.fxml
@@ -23,7 +23,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="458.0" prefWidth="836.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bAdd" layoutX="154.0" layoutY="494.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="514.0" style="-fx-background-color: #ed7812;" text="Añadir pregunta" textFill="#f5f5f5e5" />
+            <Button fx:id="bAdd" layoutX="154.0" layoutY="494.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="514.0" style="-fx-background-color: #ffb412;" text="Añadir pregunta" textFill="#f5f5f5e5" />
             <TextField fx:id="textPregunta" layoutX="83.0" layoutY="99.0" prefHeight="26.0" prefWidth="414.0" />
             <Label layoutX="83.0" layoutY="145.0" prefHeight="18.0" prefWidth="66.0" text="Respuesta 1" />
             <TextField fx:id="textResp1" layoutX="83.0" layoutY="174.0" prefHeight="26.0" prefWidth="414.0" />
@@ -35,7 +35,7 @@
             <RadioButton fx:id="rBut2" layoutX="559.0" layoutY="263.0" mnemonicParsing="false" text="Correcta" />
             <RadioButton fx:id="rBut1" layoutX="559.0" layoutY="178.0" mnemonicParsing="false" text="Correcta" />
             <RadioButton fx:id="rBut3" layoutX="559.0" layoutY="344.0" mnemonicParsing="false" text="Correcta" />
-            <Button fx:id="bBack" layoutX="83.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #3b31ea;" text="Volver" textFill="WHITE" />
+            <Button fx:id="bBack" layoutX="29.0" layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
